--- a/react/data-vis/src/App.css
+++ b/react/data-vis/src/App.css
@@ -12,9 +12,9 @@
 }
 
 .PieChart {
-    display: flex;
-    width: 500px;
-    margin: 0 auto;
+  display: flex;
+  width: 500px;
+  margin: 0 auto;
 }
 
 .pie {
@@ -33,4 +33,10 @@
   text-align: left;
   margin-top: 40px;
   margin-left: 40px;
+}
+
+.dropdown-container {
+    width: 800px;
+    margin: 0 auto;
+    margin-bottom: 10px;
 }
